/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.2.0/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    application
    alias(libs.plugins.champeau.jmh)
}

repositories {
    mavenCentral()
}

dependencies {
    implementation(libs.jcip.annotations)
    implementation(libs.netty)
    testImplementation(libs.junit.jupiter)
    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    mainClass = "fr.qsh.fmt.java.concurrency.App"
}

// Configurer la tâche run pour afficher les logs en temps réel
tasks.named<JavaExec>("run") {
    standardInput = System.`in`
    standardOutput = System.out
    errorOutput = System.err

    // Forcer l'affichage immédiat des logs sans bufferisation
    jvmArgs = listOf(
        "-Xms512m",
        "-Xmx2g"
    )
}

tasks.named<Test>("test") {
    useJUnitPlatform()
}
